--- a/1. form validation/index.html
+++ b/1. form validation/index.html
@@ -4,7 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Form Validation Exercise</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <form id="form" class="form">
+        <h2>Pas de compte? Créez-en un</h2>
+
+        <div class="form-control">
+          <label for="username">Nom d'utilisateur</label>
+          <input type="text" id="username" placeholder="username" />
+          <small>Nom d'utilisateur invalide</small>
+        </div>
+        <!-- Keeping the input type as text for JS validation instead of HTML5 native form validation -->
+        <div class="form-control">
+          <label for="email">E-mail</label>
+          <input type="text" id="email" placeholder="username" />
+          <small>E-mail invalide</small>
+        </div>
+        <div class="form-control">
+          <label for="password">Mot de passe</label>
+          <input
+            type="password"
+            id="password"
+            placeholder="Inserez votre mot de passe"
+          />
+          <small>Mot de passe invalide</small>
+        </div>
+        <div class="form-control">
+          <label for="password2">Confirmez votre mot de passe</label>
+          <input
+            type="password"
+            id="password2"
+            placeholder="Confirmez votre mot de passe"
+          />
+          <small>Mot de passe invalide</small>
+        </div>
+
+        <button>Enregistrer</button>
+      </form>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
