--- a/2. random quote/index.html
+++ b/2. random quote/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="app.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <main>
+      <section id="quoteDisplay">
+        <blockquote>A quote test</blockquote>
+        <p class="author">- Marc</p>
+        <p class="source">Source: My App</p>
+      </section>
+
+      <section id="buttons">
+        <button id="getQuoteBtn">
+          <i class="fa-regular fa-circle-right"></i>
+          New Quote
+        </button>
+        <button id="tweetQuoteBtn">
+          <i class="fa-brands fa-twitter"></i>
+          Tweet
+        </button>
+      </section>
+    </main>
+  </body>
 </html>
