[2.random_quote] Working with multiple data sources

--- a/2. random quote/index.html
+++ b/2. random quote/index.html
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="./datasources/officialJokesDataSource.js"></script>
+    <script src="./datasources/typeFitDataSource.js"></script>
   </head>
   <body>
     <main>
